instance.tf
resource "aws_instance" "my_ec2" {
  ami           = var.ami_id
  instance_type = "t2.micro"

  tags = {
    Name = "my_ec2"
  }
}
